langtools/test/tools/javac/typeAnnotations/failures/AnnotationVersion.out
AnnotationVersion.java:9:25: compiler.err.type.annotations.not.supported.in.source: 1.6
1 error
